mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/storageLayoutSpecifier/address.sol
contract C layout at address(0x1234) {}
// ----
// TypeError 1763: (21-36): The base slot of the storage layout must evaluate to an integer (the type is 'address' instead).
